# portfolio

./: .gitignore  README.md
projects/Ai_project/: README-2.md  heart_beat_classification.ipynb
projects/Ml_project/: ML.ipynb  README-3.md
projects/Neural_networks/: README-4.md  Time_Series_Forecasting.ipynb
projects/Neural_networks2/: README.md
projects/xseed_tracking/: .gitignore  config_manager.py  import_requests.py  main.py  multi_player_xseed_map.py  pyproject.toml  run_debug.py  simple_hardware_comparison.py  test_example.py  testing_conversion.py  toy_example.py  validate.py
projects/xseed_tracking/data/: multi_player_xseed_map.py
projects/xseed_tracking/services/: haversine_service.py  pitch_service.py
projects/xseed_tracking/src/: comparison_processor.py  coordinate_cleaner.py  coordinates_processor.py  data_processor.py  data_sync.py  display_manager.py  enhanced_visualization_manager.py  fetch_club_milano.py  fetch_new_ip.py  fetch_tracking_data.py  gps_comparison.py  ground_truth_processor.py  haversine_processor.py  import_requests.py  player_data_analysis.py  retry_failed_users.py  streamlit-animated-player-tracking.py  test_server.py  transformation_test.py  utils.py  xseed_map_app.py
projects/xseed_tracking/team_stats/: stretch_index_module.py  team_distances_app.py
projects/xseed_tracking/test/: plots.py
